--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "framer-motion": "^1.10.2",
     "gatsby": "^2.19.45",
     "gatsby-plugin-sass": "^2.2.1",
     "node-sass": "^4.13.1",
