--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "framer-motion": "^1.10.2",
     "gatsby": "^2.19.45",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-source-contentful": "^2.2.5",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "shortid": "^2.2.15",
     "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
