--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^8.2.0",
     "framer-motion": "^1.10.2",
     "gatsby": "^2.19.45",
+    "gatsby-image": "^2.3.1",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-contentful": "^2.2.5",
+    "gatsby-transformer-sharp": "^2.4.3",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
