--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^1.10.2",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.3.1",
+    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-contentful": "^2.2.5",
@@ -27,8 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "shortid": "^2.2.15",
-    "smooth-scroll": "^16.1.3"
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
