--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "disqus-react": "^1.0.8",
     "dotenv": "^8.2.0",
     "framer-motion": "^1.10.2",
     "gatsby": "^2.19.45",
