--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "shortid": "^2.2.15"
+    "react-slick": "^0.25.2",
+    "shortid": "^2.2.15",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
