--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-contentful": "^2.2.5",
@@ -30,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-slick": "^0.25.2",
     "shortid": "^2.2.15",
     "slick-carousel": "^1.8.1"
