--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-contentful": "^2.2.5",
+    "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
     "node-sass": "^4.13.1",
